src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Patient_Last_Name_c__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Member_Id_c__c</fullName>
        <label>Patient Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_SSN__c</fullName>
        <label>Patient SSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Private Pay</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Admit_Date__c</fullName>
        <label>Pending Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal Relationship</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_DOB__c</fullName>
        <label>Policy Holder DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Name__c</fullName>
        <label>Policy Holder Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>CHOICE</fullName>
                </value>
                <value>
                    <fullName>CHOICE PLUS</fullName>
                </value>
                <value>
                    <fullName>OPEN ACCESS</fullName>
                </value>
                <value>
                    <fullName>OPEN ACCESS PLUS</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Primary Insurance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Professional Relationship</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Professional Relationship)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promissory_Cost__c</fullName>
        <description>Promissory Cost</description>
        <label>Promissory Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promissory_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Promissory agreement Signed</description>
        <label>Promissory Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Native Hawaiian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>American Indian/Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Multi-Racial</fullName>
                </value>
                <value>
                    <fullName>Other not listed</fullName>
                </value>
                <value>
                    <fullName>Prefers Not to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Readmit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Readmit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Alumni Team - Readmit)</relationshipLabel>
        <relationshipName>Leads5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Notes__c</fullName>
        <description>Refer Out Notes</description>
        <label>Refer Out Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send to marketers for refer out.</description>
        <label>Refer Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referer__c</fullName>
        <description>Referring agency or facility</description>
        <label>Referer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Referred By)</relationshipLabel>
        <relationshipName>anyname</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_Out_To__c</fullName>
        <description>Referred out to another agency since we could not take.</description>
        <label>Referred Out To:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Policy has been Referred out already.</description>
        <label>Referred Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_To_Marketer__c</fullName>
        <label>Referred To Marketer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alicia Reddy</fullName>
                </value>
                <value>
                    <fullName>Austin Thomas</fullName>
                </value>
                <value>
                    <fullName>Brian Cellary</fullName>
                </value>
                <value>
                    <fullName>Chanda Lynn</fullName>
                </value>
                <value>
                    <fullName>Colin Troy</fullName>
                </value>
                <value>
                    <fullName>Jessica Drago</fullName>
                </value>
                <value>
                    <fullName>Karrie Campos</fullName>
                </value>
                <value>
                    <fullName>Matt Cincogrono</fullName>
                </value>
                <value>
                    <fullName>Matt Dunphy</fullName>
                </value>
                <value>
                    <fullName>Mike O&apos;Sullivan</fullName>
                </value>
                <value>
                    <fullName>Ralph Johnson</fullName>
                </value>
                <value>
                    <fullName>Richie Webber</fullName>
                </value>
                <value>
                    <fullName>Ron Shippert</fullName>
                </value>
                <value>
                    <fullName>Saul Kane</fullName>
                </value>
                <value>
                    <fullName>Spenser Rose</fullName>
                </value>
                <value>
                    <fullName>Stephanie King</fullName>
                </value>
                <value>
                    <fullName>Tamara Kirby</fullName>
                </value>
                <value>
                    <fullName>Thomas Hernandez</fullName>
                </value>
                <value>
                    <fullName>Tim Kavanaugh</fullName>
                </value>
                <value>
                    <fullName>Tracie Duitch</fullName>
                </value>
                <value>
                    <fullName>Tyler Forsberg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Referred To)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Housing_Cost__c</fullName>
        <label>Rent/Housing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requires_VOB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Insufficient info.  Requires a VOB</description>
        <label>Requires VOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ring_Time__c</fullName>
        <label>Ring Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Group_No__c</fullName>
        <label>Secondary Ins Group No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Member_ID__c</fullName>
        <label>Secondary Ins Member ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_DOB__c</fullName>
        <label>Secondary Ins Sub DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_Last_Name__c</fullName>
        <label>Secondary Ins Sub Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_Phone__c</fullName>
        <label>Secondary Ins Sub Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Sub_email__c</fullName>
        <label>Secondary Ins Sub email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Address2__c</fullName>
        <label>Secondary Ins Subscriber Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Address__c</fullName>
        <label>Secondary Ins Subscriber Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Employer__c</fullName>
        <label>Secondary Ins Subscriber Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_First_Name__c</fullName>
        <label>Secondary Ins Subscriber First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Gender__c</fullName>
        <label>Secondary Ins Subscriber Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MALE</fullName>
                </value>
                <value>
                    <fullName>FEMALE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Relationship__c</fullName>
        <label>Secondary Ins Subscriber Relationship</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_SSN__c</fullName>
        <label>Secondary Ins Subscriber SSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_Street_Address__c</fullName>
        <label>Secondary Ins Subscriber Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber__c</fullName>
        <label>Secondary Ins Subscriber First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_city__c</fullName>
        <label>Secondary Ins Subscriber city</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_state__c</fullName>
        <label>Secondary Ins Subscriber state</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Ins_Subscriber_zip__c</fullName>
        <label>Secondary Ins Subscriber zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Company__c</fullName>
        <label>Secondary Insurance Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Phone_Number__c</fullName>
        <label>Secondary Insurance Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Secondary Insurance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_VOB_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary VOB Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Refer_Outs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends to refer outs</description>
        <label>Send to Refer Outs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Outbound_Referral__c</fullName>
        <label>Status of Outbound Referral</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stipulations_Notes__c</fullName>
        <description>Notes and stipulations for private pay patients.</description>
        <label>Stipulations/Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address_2__c</fullName>
        <label>Subscriber Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address__c</fullName>
        <description>Subscriber Address</description>
        <label>Subscriber Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_City__c</fullName>
        <label>Subscriber City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_DOB__c</fullName>
        <description>Subscriber Date of Birth</description>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Email__c</fullName>
        <description>Subscriber Email</description>
        <label>Subscriber Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subscriber_Employer__c</fullName>
        <label>Subscriber Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_First_Name__c</fullName>
        <label>Subscriber First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Gender__c</fullName>
        <label>Subscriber Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Last_Name__c</fullName>
        <label>Subscriber Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <description>Subscriber Name</description>
        <label>Subscriber Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Phone__c</fullName>
        <description>Subscriber Phone</description>
        <label>Subscriber Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Subscriber_Relationship__c</fullName>
        <description>Subscriber Relationship</description>
        <label>Subscriber Relationship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Relationship_c__c</fullName>
        <label>Subscriber Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_SSN__c</fullName>
        <label>Subscriber SSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_State__c</fullName>
        <label>Subscriber State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Street_Address__c</fullName>
        <label>Subscriber Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Zip__c</fullName>
        <label>Subscriber Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplies__c</fullName>
        <label>Supplies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Talk_Time__c</fullName>
        <label>Talk Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Agreed_To_Pay__c</fullName>
        <description>Total amount client has agreed to pay.</description>
        <label>Total Agreed To Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Source__c</fullName>
        <label>Tracking Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website Calls</fullName>
                </value>
                <value>
                    <fullName>Website Forms</fullName>
                </value>
                <value>
                    <fullName>Web Chats</fullName>
                </value>
                <value>
                    <fullName>Call Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transport_Info__c</fullName>
        <description>Related information for transport team.</description>
        <label>Transport Info</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transport_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transport Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment Center</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Treatment Center)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment_Cost__c</fullName>
        <description>Cost of treatment only</description>
        <label>Treatment Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>URGENT_VOB_REQUEST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>URGENT VOB REQUEST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UTM_Source__c</fullName>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOB_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VOB Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VOB_Results_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VOB Results Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VTX_Facility_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VTX Facility</label>
        <referenceTo>VerifyTx__VTX_Facility__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VTX_Payer_Detail_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VTX Payer Detail</label>
        <referenceTo>VerifyTx__VTX_Payer_Detail__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verification_Status_c__c</fullName>
        <label>Verification Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Verify_Once__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Verify Once</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>